--- a/css/style.css
+++ b/css/style.css
@@ -541,6 +541,7 @@ a:focus {
 	top: 8px;
 }
 
+
 .stats {
 	padding: 50px 0px 0px;
 	display: table;
@@ -585,10 +586,11 @@ a:focus {
 .social {
 	padding: 0;
 	margin: 0;
+
 }
 
 .social li {
-	float: left;
+	float:left;
 	margin-right: 35px;
 	list-style: none;
 }
@@ -693,6 +695,7 @@ a:focus {
 	z-index: 444;
 }
 
+
 .resume-content ul {
 	padding: 0;
 	margin: 0;
@@ -780,7 +783,7 @@ a:focus {
 
 #works {
 	border-top: 20px solid #fff;
-	background: #6b6ba1;
+	background: #B18965;
 	padding: 100px 0 0;
 }
 
