--- a/css/prettyphoto.css
+++ b/css/prettyphoto.css
@@ -326,9 +326,9 @@
 					margin: 0;
 				}
 				
-				/*.pp_social { float: left; margin: 7px 0 0 0; }*/
-				/*.pp_social .facebook { float: left; position: relative; top: -1px; margin-left: 5px; width: 55px; overflow: hidden; }*/
-				/*.pp_social .twitter { float: left; }*/
+				.pp_social { float: left; margin: 7px 0 0 0; }
+				.pp_social .facebook { float: left; position: relative; top: -1px; margin-left: 5px; width: 55px; overflow: hidden; }
+				.pp_social .twitter { float: left; }
 				
 				.pp_nav {
 					clear: right;
