--- a/css/style.css
+++ b/css/style.css
@@ -220,19 +220,19 @@ a:focus {
 }
 
 .sidebar-nav li:nth-child(3) a:hover {
-	background: #e5683b;
+	background: #683520;
 }
 
 .sidebar-nav li:nth-child(4) a:hover {
-	background: #1b4a64;
+	background: #442419;
 }
 
 .sidebar-nav li:nth-child(5) a:hover {
-	background: #6bac68;
+	background: #866633;
 }
 
 .sidebar-nav li:nth-child(6) a:hover {
-	background: #6b6ba1;
+	background: #B18965;
 }
 
 .sidebar-nav li:nth-child(7) a:hover {
