--- a/css/style.css
+++ b/css/style.css
@@ -220,19 +220,19 @@ a:focus {
 }
 
 .sidebar-nav li:nth-child(3) a:hover {
-	background: #683520;
+	background: #e5683b;
 }
 
 .sidebar-nav li:nth-child(4) a:hover {
-	background: #442419;
+	background: #1b4a64;
 }
 
 .sidebar-nav li:nth-child(5) a:hover {
-	background: #866633;
+	background: #6bac68;
 }
 
 .sidebar-nav li:nth-child(6) a:hover {
-	background: #B18965;
+	background: #6b6ba1;
 }
 
 .sidebar-nav li:nth-child(7) a:hover {
@@ -1214,42 +1214,6 @@ a:focus {
 
 #success, #error {
 	display:none
-}
-
-#success div, #error div {
-	display:block;
-	position:relative;
-	top:0;
-	width:100%;
-}
-
-#success div p {
-	font-family: Montserrat;
-	text-transform: uppercase;
-	color: #fff;
-	background: #7cc623;
-	font-size: 12px;
-	padding: 15px 10px;
-	padding-left:60px;
-	position:relative;
-}
-
-#error div p {
-	font-family: Montserrat;
-	text-transform: uppercase;
-	color: #fff;
-	background: #f00;
-	font-size: 12px;
-	padding: 15px 10px;
-	padding-left:60px;
-	position:relative;
-}
-
-#success div p i, #error div p i {
-	font-size: 26px;
-	position: absolute;
-	top: 12px;
-	left: 22px;
 }
 
 .cinfo h4 {
