--- a/css/custom.css
+++ b/css/custom.css
@@ -3,7 +3,12 @@
 	font-size: 1.2em
 }
 .survey-label {
-	margin-right: 10px
+	margin-right: 10px;
+    margin-left: 3px
+}
+
+.inputSpace {
+   margin-right: 40px;
 }
 .MyButton {
    border-top: 1px solid #000000;
@@ -42,14 +47,14 @@
 	color: #d5c1a9;
 	background: #866633;
 	}
-.modal-body p {
-	color: black;
-	background-color: #683520;	
-	}
-.modal-body-x {
-	color: black;
-	background-color: #683520;	
-	}	
+/*.modal-body p {*/
+	/*color: black;*/
+	/*background-color: #683520;	*/
+	/*}*/
+/*.modal-body-x {*/
+	/*color: black;*/
+	/*background-color: #683520;	*/
+	/*}	*/
 .modal-title {
 	color: black;
 	}	
@@ -59,9 +64,40 @@
 .modal-footer {
 	background-color: #442419;
 }
+/*.modal-body-bg {*/
+	/*z-index: 999;*/
+	/*padding: 0px;*/
+	/*height: 250px;*/
+	/*background: url("../images/lattelove-bg.png") no-repeat;	*/
+	/*}*/
+
+
+
 .modal-body-bg {
-	z-index: 999;
-	padding: 0px;
-	height: 250px;
-	background: url("../images/lattelove-bg.png") no-repeat;	
-	}
+   z-index: 999;
+   padding: 0px;
+   height: 250px;
+   background: rgb(177,137,101) url("../images/lattelove-bg2.png") no-repeat left center;
+}
+.popupRregister  p{
+   color: #fff;
+   font-family: 'Droid Serif', serif;
+   font-style: italic;
+   font-size: 33px;
+   font-weight: 400;
+   line-height: 48px;
+   padding-left: 160px;
+   margin: 0;
+   padding-top: 100px;
+}
+.surveyAnswers  p{
+   color: #fff;
+   font-family: 'Droid Serif', serif;
+   font-style: italic;
+   font-size: 18px;
+   font-weight: 400;
+   line-height: 22px;
+   padding-left: 120px;
+   margin: 0;
+   padding-top: 95px;
+}
